Fix logo alignment in small screen.

--- a/src/Assets/Styles/Header.scss
+++ b/src/Assets/Styles/Header.scss
@@ -44,9 +44,6 @@
   .header-content{
    flex-direction: column;
    margin-bottom: 10px;
-   h1{
-    margin-bottom: 0px;
-   }
    .input-form{
     width: 210px;
    }
